# ai-agent-roadmap

./: .gitignore  AGENTS.md  AI-Agent-工程师转型路线-12周.md
agent-mini/: .env.example  .gitignore  pyproject.toml
agent-mini/evals/buggy_project/src/: checkout.py  pagination.py
agent-mini/evals/buggy_project/tests/: test_checkout.py  test_pagination.py
agent-mini/src/: __init__.py  cli.py  demo.py  main.py
agent-mini/src/agent/: config.py  context.py  loop.py  prompts.py
agent-mini/src/tools/: __init__.py  fs.py  registry.py  search.py  shell.py  tools.py
code/: .gitignore  pyproject.toml
code/W01/: app.py  estimate.py  index.py  main.py  parallel.py  pricing.py  pyproject.toml  session5_experiment.py  stream_events.py  tool_use_demo.py  tool_use_stream_demo.py
code/W01/static/: index.html
code/W02/: NOTES.md  app.py
code/W02/tools/: loop.py  manual_loop.py  registry.py  structured.py
code/shared/: agent_sdk.py  pyproject.toml
weeks/: README.md  W01.md  W02.md  W03.md  W04.md  W05.md  W06.md  W07.md  W08.md  W09.md  W10.md  W11-12.md
