[project]
name = "ai-agent-roadmap"
version = "0.1.0"
description = "AI Agent learning roadmap exercises"
requires-python = ">=3.12"
dependencies = [
    "agent-sdk",
    "anthropic>=0.68.0",
    "fastapi>=0.116.1",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv]
package = false

[tool.uv.sources]
agent-sdk = { path = "shared", editable = true }
