[project]
name = "agent-sdk"
version = "0.1.0"
description = "Shared Anthropic agent SDK helpers"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.68.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent_sdk.py"]
